调整头部导航的样式，优化逻辑

--- a/demo/index.html
+++ b/demo/index.html
@@ -32,23 +32,20 @@
 			<!-- Start nav -->
 			<nav class="menu">
 				<div class="container">
-					<div class="brand">
+					<!-- <div class="brand">
 						<a href="#">
 							<img src="images/logo.png" alt="Magz Logo">
 						</a>
-					</div>
+					</div> -->
 					<div class="mobile-toggle">
 						<a href="#" data-toggle="menu" data-target="#menu-list"><i class="ion-navicon-round"></i></a>
 					</div>
 					<div class="mobile-toggle">
 						<a href="#" data-toggle="sidebar" data-target="#sidebar"><i class="ion-ios-arrow-left"></i></a>
 					</div>
-					<div id="menu-list">
+					<div id="menu-list" style="text-align: center">
 						<ul class="nav-list">
-							<li class="for-tablet nav-title"><a>Menu</a></li>
-							<li class="for-tablet"><a href="login.html">Login</a></li>
-							<li class="for-tablet"><a href="register.html">Register</a></li>
-							<li><a href="category.html">Standard</a>
+							<li><a href="category.html">Standard<i class="ion-ios-arrow-right"></i></a>
 								<div class="dropdown-menu megamenu">
 									<div class="megamenu-inner">
 										<div class="row">
