--- a/front/assets/public/header.html
+++ b/front/assets/public/header.html
@@ -334,10 +334,10 @@
     <!--  头部导航  -->
 
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-    <script src="assets/js/jquery.min.js"></script>
+    <script src="assets/js/public/jquery.min.js"></script>
     <!-- All js library -->
     <script src="assets/js/bootstrap/bootstrap.min.js"></script>
-    <script src="assets/js/owl.carousel.min.js"></script>
+    <script src="assets/js/public/owl.carousel.min.js"></script>
     <script type="text/javascript">
        setTimeout(() => {
            $(document).ready(function () {
