调整文件结构

--- a/front/assets/public/footer.html
+++ b/front/assets/public/footer.html
@@ -18,7 +18,7 @@
     <link rel="stylesheet" type="text/css" href="http://www.jq22.com/jquery/font-awesome.4.6.0.css" />
 
     <!-- Custom css -->
-    <link rel="stylesheet" href="assets/css/style.css" />
+    <link rel="stylesheet" href="assets/css/public/style.css" />
     <link rel="stylesheet" href="assets/css/public/menu.css" />
     <link rel="stylesheet" href="assets/css/home.css" />
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
