--- a/front/recruitment.html
+++ b/front/recruitment.html
@@ -21,7 +21,8 @@
     <meta name="msapplication-tap-highlight" content="no">
     <meta name="format-detection" content="telephone=no">
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-    <title></title>
+    <title>招聘</title>
+    <script src="assets/js/commomCss.js"></script>
     <link rel="stylesheet" href="assets/js/fullPage/fullpage.min.css" />
     <link rel="stylesheet" href="assets/js/swiper/swiper.min.css" />
     <link rel="stylesheet" href="assets/css/recruitment.css" />
@@ -202,7 +203,6 @@
         </div>
     </div>
     <script src="assets/js/commom.js"></script>
-    <script src="assets/js/commomCss.js"></script>
     <script src="./assets/js/fullPage/fullpage.min.js"></script>
     <script src="./assets/js/swiper/swiper.min.js"></script>
     <script>
