调整文件结构，招聘详情页

--- a/front/index.html
+++ b/front/index.html
@@ -426,8 +426,8 @@
   </footer>
   <script src="assets/js/commom.js"></script>
   <script>
-    $("#index-header").load("assets/public/header.html");
-    $("#index-footer").load("assets/public/footer.html")
+    $("#index-header").load("public/header.html");
+    $("#index-footer").load("public/footer.html")
   </script>
 </body>
 
