--- a/front/recruitment.html
+++ b/front/recruitment.html
@@ -116,7 +116,7 @@
                 </div>
                 <section class="en_us_content">
                     <div class="item" style="padding:10px">
-                        <a href="">
+                        <a href="social-recruitment.html">
                             <div class="en_us_img">
                                 <img src="assets/img/recruitment/society-portal.4e11c792.png" alt="" />
                                 <div class="mask"></div>
@@ -206,7 +206,7 @@
     <script src="./assets/js/fullPage/fullpage.min.js"></script>
     <script src="./assets/js/swiper/swiper.min.js"></script>
     <script>
-        $("#recruitment-header").load("assets/public/header.html");
+        $("#recruitment-header").load("public/header.html");
     </script>
     <script>
 
