--- a/front/public/footer.html
+++ b/front/public/footer.html
@@ -9,18 +9,18 @@
     <title>首页</title>
 
     <!-- Bootstrap -->
-    <link rel="stylesheet" href="assets/css/bootstrap/bootstrap.min.css" />
+    <link rel="stylesheet" href="../assets/css/bootstrap/bootstrap.min.css" />
 
     <!-- Optional theme -->
-    <link rel="stylesheet" href="assets/css/bootstrap/bootstrap-theme.min.css" />
+    <link rel="stylesheet" href="../assets/css/bootstrap/bootstrap-theme.min.css" />
 
     <!-- Font Awesome -->
     <link rel="stylesheet" type="text/css" href="http://www.jq22.com/jquery/font-awesome.4.6.0.css" />
 
     <!-- Custom css -->
-    <link rel="stylesheet" href="assets/css/public/style.css" />
-    <link rel="stylesheet" href="assets/css/public/menu.css" />
-    <link rel="stylesheet" href="assets/css/home.css" />
+    <link rel="stylesheet" href="../assets/css/public/style.css" />
+    <link rel="stylesheet" href="../assets/css/public/menu.css" />
+    <link rel="stylesheet" href="../assets/css/home.css" />
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
     <!--[if lt IE 9]>
