招聘页屏幕适配

--- a/front/recruitment.html
+++ b/front/recruitment.html
@@ -125,7 +125,7 @@
                         </a>
                     </div>
                     <div class="item" style="padding:10px">
-                        <a href="">
+                        <a href="social-recruitment.html">
                             <div class="en_us_img">
                                 <img src="assets/img/recruitment/campus-portal.91b934f9.png" alt="" />
                                 <div class="mask"></div>
@@ -134,7 +134,7 @@
                         </a>
                     </div>
                     <div class="item" style="padding:10px">
-                        <a href="">
+                        <a href="social-recruitment.html">
                             <div class="en_us_img">
                                 <img src="assets/img/recruitment/intern-portal.99d5c474.png" alt="" />
                                 <div class="mask"></div>
