--- a/front/social-recruitment.html
+++ b/front/social-recruitment.html
@@ -48,56 +48,56 @@
         <div class="position-list">
             <div class="position-item">
                 <div class="table-cell">
-                    <div class="item-title">综合司管 (J190411028)</div>
+                    <a href=""><div class="item-title">综合司管 (J190411028)</div></a>
                     <div class="item-p-n">代驾事业部 &nbsp;/&nbsp;运营&nbsp;/&nbsp;金华</div>
                     <div class="item-time">2019-04-17 19:59</div>
                 </div>
             </div>
             <div class="position-item">
                 <div class="table-cell">
-                    <div class="item-title">数据分析师（案件溯源方向） (J190412015)</div>
+                    <a href=""><div class="item-title">数据分析师（案件溯源方向） (J190412015)</div></a>
                     <div class="item-p-n">安全事务部 &nbsp;/&nbsp;运营&nbsp;/&nbsp;金华</div>
                     <div class="item-time">2019-04-17 19:59</div>
                 </div>
             </div>
             <div class="position-item">
                 <div class="table-cell">
-                    <div class="item-title">综合司管 (J190411028)</div>
+                    <a href=""><div class="item-title">综合司管 (J190411028)</div></a>
                     <div class="item-p-n">代驾事业部 &nbsp;/&nbsp;运营&nbsp;/&nbsp;金华</div>
                     <div class="item-time">2019-04-17 19:59</div>
                 </div>
             </div>
             <div class="position-item">
                 <div class="table-cell">
-                    <div class="item-title">数据分析师（案件溯源方向） (J190412015)</div>
+                    <a href=""><div class="item-title">数据分析师（案件溯源方向） (J190412015)</div></a>
                     <div class="item-p-n">安全事务部 &nbsp;/&nbsp;运营&nbsp;/&nbsp;金华</div>
                     <div class="item-time">2019-04-17 19:59</div>
                 </div>
             </div>
             <div class="position-item">
                 <div class="table-cell">
-                    <div class="item-title">综合司管 (J190411028)</div>
+                    <a href=""><div class="item-title">综合司管 (J190411028)</div></a>
                     <div class="item-p-n">代驾事业部 &nbsp;/&nbsp;运营&nbsp;/&nbsp;金华</div>
                     <div class="item-time">2019-04-17 19:59</div>
                 </div>
             </div>
             <div class="position-item">
                 <div class="table-cell">
-                    <div class="item-title">数据分析师（案件溯源方向） (J190412015)</div>
+                    <a href=""><div class="item-title">数据分析师（案件溯源方向） (J190412015)</div></a>
                     <div class="item-p-n">安全事务部 &nbsp;/&nbsp;运营&nbsp;/&nbsp;金华</div>
                     <div class="item-time">2019-04-17 19:59</div>
                 </div>
             </div>
             <div class="position-item">
                 <div class="table-cell">
-                    <div class="item-title">综合司管 (J190411028)</div>
+                    <a href=""><div class="item-title">综合司管 (J190411028)</div></a>
                     <div class="item-p-n">代驾事业部 &nbsp;/&nbsp;运营&nbsp;/&nbsp;金华</div>
                     <div class="item-time">2019-04-17 19:59</div>
                 </div>
             </div>
             <div class="position-item">
                 <div class="table-cell">
-                    <div class="item-title">数据分析师（案件溯源方向） (J190412015)</div>
+                    <a href=""><div class="item-title">数据分析师（案件溯源方向） (J190412015)</div></a>
                     <div class="item-p-n">安全事务部 &nbsp;/&nbsp;运营&nbsp;/&nbsp;金华</div>
                     <div class="item-time">2019-04-17 19:59</div>
                 </div>
